# bmdr-setup

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: approval-gate.yml  ci.yml  deploy.yml  merge-bot.yml  opencode-review.yml  pr-only-merge.yml  require-pr-review.yml
app/: config.py  main.py
app/routers/: health.py  items.py
bmdr_cli/: __init__.py  __main__.py  approval.py  commands.py  config.py  github_ops.py  opencode_ops.py  templates.py
cli/: bmdr
docs/: README.md
docs/architecture/: IT_INFRASTRUCTURE.md
docs/compliance/: DORA_COMPLIANCE.md  PCI_DSS_REQUIREMENTS.md  SOC2_CONTROLS.md
docs/policies/: ACCESS_CONTROL_POLICY.md  CHANGE_MANAGEMENT_POLICY.md  DEPLOYMENT_POLICY.md  README.md  SECURITY_POLICY.md
k8s/: README.md  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service.yaml
scripts/: build.sh  deploy.sh  run-local.sh  setup-tunnel.sh
templates/default/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
templates/default/.github/workflows/: ci.yml
templates/default/app/: main.py
templates/default/tests/: conftest.py  test_app.py
templates/issue/: bug.md  feature.md
templates/pr/: bugfix.md  default.md  feature.md  hotfix.md  release.md
templates/skill/: SKILL.md
templates/skill/scripts/: setup.sh
tests/: conftest.py  test_health.py  test_items.py
